# organization-of-parking-lots-hackathon

./: .gitignore  README.md  docker-compose.yml  scripts_create_partitions.sql  scripts_fill_cities.sql
backend/: .editorconfig  .env  Dockerfile  Makefile  README.md  celerybeat-schedule.db  init_db.py  pyproject.toml
backend/app/: __main__.py  worker.py
backend/app/config/: __init__.py  default.py
backend/app/db/: __init__.py  alembic.ini
backend/app/db/connection/: __init__.py  session.py
backend/app/db/migrator/: env.py
backend/app/db/models/: __init__.py  base.py  cities.py  parking_places.py  payment_methods.py  payments.py  reservations.py  review.py  user.py
backend/app/endpoints/: __init__.py  auth.py  get_places.py  ping.py  reservation.py  review.py  update_place.py
backend/app/schemas/: __init__.py
backend/app/schemas/auth/: __init__.py  payment.py  registration.py  user.py
backend/app/schemas/get_places/: __init__.py  get_places_req.py
backend/app/schemas/get_places_in_radius/: __init__.py  get_places_req.py
backend/app/schemas/reservations/: __init__.py  reservation.py
backend/app/schemas/reviews/: __init__.py  review.py
backend/app/schemas/update_place/: __init__.py  update_place.py
backend/app/utils/common/: __init__.py
backend/app/utils/get_places/: __init__.py  get_place.py  get_places.py
backend/app/utils/get_places_in_radius/: __init__.py  get_places_in_radius.py
backend/app/utils/health_check/: __init__.py
backend/app/utils/logging/: __init__.py  logger.py
backend/app/utils/payment/: __init__.py  payment.py
backend/docker_scripts/: .app_run.sh.un~  .celery_run.sh.un~  app_run.sh  app_run.sh~  celery_run.sh
nginx/: nginx.conf
(+59 files in other folders)
