[tool.poetry]
name = "pythonproject14"
version = "0.1.0"
description = ""
authors = ["Team"]

[tool.poetry.dependencies]
python = "^3.11.0"
aiohttp = "^3.8.1"
alembic = "^1.8.1"
asyncpg = "^0.27.0"
bcrypt = "^4.0.1"
beautifulsoup4 = "^4.11.1"
fastapi = "^0.101.0"
fastapi-pagination = "^0.12.4"
greenlet = "^2.0.2"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.3"
pydantic = {extras=["dotenv", "email"], version="^1.9.1"}
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
SQLAlchemy = "1.4.49"
SQLAlchemy-Utils = "^0.41.1"
starlette = "^0.27.0"
url-normalize = "^1.4.3"
uvicorn = "^0.22.0"
gunicorn = "^21.0.1"
aiofiles="^23.2.1"
asgiref="3.7.2"
cryptography = "41.0.3"
fastapi-utils = "^0.2.1"
python-dotenv = "^1.0.0"
redis = "^4.5.4"
celery = "^5.2.7"
yookassa = "^2.5.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^22.6.0"
ConfigArgParse = "^1.5.3"
httpx = "^0.23.0"
isort = "^5.10.1"
mock = "^4.0.3"
mypy = "^0.971"
pylint = "^2.14.5"
pytest = "^7.1.2"
pytest-aiohttp = "^1.0.4"
pytest-cov = "^3.0.0"
sqlalchemy2-stubs = "^0.0.2-alpha.24"
watchfiles = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.master]
extension-pkg-allow-list = ["pydantic"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
good-names = ["db"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "C0114",  # missing-module-docstring
  "C0116",  # missing-function-docstring
  "R0903",  # too-few-public-methods (for sqlalchemy tables and pydantic classes)
  "C0115",  # missing-class-docstring (for api routes)
]